TEST_PROGRAMS/INVALID/shao_kun_deng/invalid4.min
#invalid token

var x : int;
x = 5;

?;
